<resources>
    <string name="app_name">Meeting Planner</string>
    <string name="title_activity_maps">Map</string>
    <string name="quitter_le_groupe">Quitter le groupe</string>
    <string name="upload_meetings">Upload Meetings</string>
    <string name="envoyer_lieu_de_rencontre">Envoyer lieu de rencontre</string>
    <string name="ouvrir_calendrier">Ouvrir calendrier</string>
    <string name="cr_er_venement">Créer évenement</string>
    <string name="sortir">Sortir</string>
    <string name="noter">Noter</string>
    <string name="valider">Valider</string>
    <string name="moyenne_des_votes_par_lieu">Moyenne des votes par lieu</string>
    <string name="vote_moyen_par_lieu">Vote moyen par lieu</string>
    <string name="cr_er_l_venement">Créer l\'évenement</string>
    <string name="note_moyenne_par_lieu">Note moyenne par lieu</string>
    <string name="vote_complet_veuillez_cr_er_un_venement">Vote completé! veuillez créer un évenement:</string>
    <string name="poster">Poster</string>
    <string name="saisir_la_description">Saisir la description...</string>
    <string name="saisir_le_titre">Saisir le titre...</string>
    <string name="poster_blog">Poster blog</string>
    <string name="title_activity_blog">Nouveau Blog</string>
    <string name="title_activity_blog_list">BlogListActivity</string>
    <string name="calendar">calendar</string>
    <string name="Ajouter_nouveau_blog">Ajouter nouveau blog</string>
    <string name="Liste_des_blogs" />
    <string name="ajouter_un_blog" />
    <string name="le_titre_du_blog_vient_ici">Le titre du blog vient ici</string>
    <string name="la_descriptiono_vient_ici">La descriptiono vient ici</string>
    <string name="le_nom_du_user_vient_ici">le nom du user vient ici</string>
    <string name="trouver_chemin">Trouver chemin</string>
    <string name="_0_km">0 km</string>
    <string name="_0_min">0 min</string>
    <string name="evenement_a_venir">Evenement a venir</string>
    <string name="v_nement_venir">Événement à venir</string>
    <string name="participe">participe</string>
    <string name="ne_participe_pas">ne participe pas</string>
    <string name="peut_etre">peut etre</string>
    <string name="heure_de_fin">Heure de fin</string>
    <string name="date_de_fin">Date de fin</string>
    <string name="chat">chat</string>
    <string name="verifier_les_votes">Verifier les votes</string>
    <string name="le_titre_du_chat_room_vient_ici">le titre du chat room vient ici</string>
    <string name="l_auteur_du_chat">l\'auteur du chat</string>
    <string name="chat_title">Chat title</string>

</resources>
