<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/start_chat"
        android:icon="@mipmap/chatroom"
        android:title="@string/chat"
        app:showAsAction="always"/>

    <item
        android:id="@+id/open_blogholder"
        android:icon="@mipmap/blog_icon"
        android:title="@string/poster_blog"
        app:showAsAction="always" />
    <item
        android:id="@+id/send_Positions"
        android:icon="@mipmap/ic_add_location_black_24dp"
        android:title="@string/envoyer_lieu_de_rencontre"
        app:showAsAction="always" />

    <item
        android:id="@+id/get_votes"
        android:actionLayout="@layout/badge_layout"
        android:title="@string/verifier_les_votes"
        app:showAsAction="always" />

    <item
        android:id="@+id/get_event"
        android:title="@string/calendar"
        android:icon="@mipmap/ic_event_black_24dp"
        app:showAsAction="always" />

    <item
        android:id="@+id/quit_group"
        android:icon="@mipmap/ic_delete_forever_black_24dp"
        android:title="@string/quitter_le_groupe"
        app:showAsAction="never" />

    <item
        android:id="@+id/quit_app"
        android:icon="@mipmap/ic_exit_to_app_black_24dp"
        android:title="@string/sortir"
        app:showAsAction="never" />


</menu>