<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/row_image"
            android:layout_width="300dp"
            android:layout_height="200dp"
            android:adjustViewBounds="true"
            android:cropToPadding="false"
            android:layout_gravity="center"
            android:src="@drawable/cliquerimage" />

        <TextView
            android:id="@+id/row_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/le_titre_du_blog_vient_ici"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/row_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/la_descriptiono_vient_ici" />

        <TextView
            android:id="@+id/row_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/le_nom_du_user_vient_ici"/>

    </LinearLayout>
</android.support.v7.widget.CardView>