<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">


    <ImageButton
        android:id="@+id/blog_img"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:adjustViewBounds="true"
        android:src="@drawable/cliquerimage"
        android:scaleType="fitXY"
        android:background="#00ffffff"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="39dp"
        android:layout_below="@+id/blog_img"
        android:layout_alignParentStart="true">

        <EditText
            android:id="@+id/blog_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/input_shape"
            android:hint="@string/saisir_le_titre"
            android:inputType="textPersonName"
            android:padding="5dp" />

        <EditText
            android:id="@+id/blog_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/input_shape"
            android:hint="@string/saisir_la_description"
            android:inputType="textMultiLine"
            android:padding="5dp" />

        <Button
            android:id="@+id/blog_postbtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:background="@color/colorPrimary"
            android:text="@string/poster"
            android:textColor="@android:color/white" />
    </LinearLayout>

</RelativeLayout>